--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,16 @@
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+			crossorigin="anonymous"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700"
+			rel="stylesheet"
+		/>
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
